[package]
name = "d-installer-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
country-emoji = "0.2.0"
d-installer-lib = { path="../d-installer-lib" }
